--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.11.0",
+    "react-select": "^5.10.2",
     "react-to-print": "^3.2.0"
   },
   "devDependencies": {
