--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "@yudiel/react-qr-scanner": "^2.5.0",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
